Add post markdown

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,6 +1,6 @@
 @import './theme.scss';
 @import '/node_modules/bulma/bulma.sass';
-// @import '/node_modules/highlight.js/scss/night-owl.scss';
+@import '/node_modules/highlight.js/scss/night-owl.scss';
 
 body {
   min-height: 100vh;
